--- a/post_event_reporting_master.Rmd
+++ b/post_event_reporting_master.Rmd
@@ -171,7 +171,9 @@ last_events_type<-event_meta_data[event_meta_data$`Event Type`==last_event$`Even
 
 previous_event_same_type<-as.data.frame(head(tail(last_events_type,2),1))
 
-comparison_same_type<-rbind(last_event)
+comparison_same_type<-rbind(previous_event_same_type,last_event)
+
+comparison_same_type$percentage_practices<-(as.numeric(comparison_same_type$Practice_attendees)/as.numeric(comparison_same_type$Attendance))
 
 ##variables for our inline text
 
@@ -191,7 +193,7 @@ This is a (mostly) automated post-event report that tells a story with our data,
 
 ## Last Event
 
-This section looks at `r last_event$Event_name` which took place on `r as.Date.POSIXct(as.numeric(last_event$Date))`. It had `r last_event$Attendance` attendees with `r last_event$Attendance_rate ` of registrants attending. 
+This section looks at `r last_event$Event_name` which took place on `r as.Date.POSIXct(as.numeric(last_event$Date))`. It had `r last_event$Attendance` attendees with `r round(as.numeric(last_event$Attendance_rate)*100,digits=1) `% of registrants attending. 
 
 
 There were `r sum(as.numeric(last_event$Positive_VUT),as.numeric(last_event$Negative_VUT),as.numeric(last_event$Neutral_VUT))` respondents to the survey. This first graph shows how they responded to the "Valuable Use of Time" (VUT) and  "I will take Action" (TA) questions on the survey.
@@ -207,17 +209,37 @@ survey_barplot
 
 ##Previous Event Comparision
 
+This section reviews the differences between `r last_event$Event_name` and the previous `r last_event$'Event Type' `, which was titled `r comparison_same_type$Event_name[1] ` and took place on `r as.Date.POSIXct(as.numeric(comparison_same_type$Date[1])) `.
+
 ```{r,echo=FALSE}
 
+
+melted_comparison<-melt(comparison_same_type,id.vars="Event_name")
+
+
+
+attendance_barplot<-ggplot(melted_comparison[5:6,],aes(x=variable,y=as.numeric(value),fill=Event_name))+geom_bar(stat='identity', position = 'dodge')
+
+role_barplot<-ggplot(melted_comparison[11:32,],aes(x=variable,y=as.numeric(value),fill=Event_name))+geom_bar(stat = 'identity',position = 'dodge')+theme(axis.text.x = element_text(angle = 90, hjust = 1))+scale_y_continuous(breaks = seq(0,60,5))
+
+attendance_barplot
+
+role_barplot
+
+```
+
+
+
+This shows the distribution of attending roles for each event. 
+```{r, echo=FALSE}
 
 
 
 ```
-This graph shows that this event had a `r attendance` attendance than the previous event. 
+
+
 
 ##Monthly Comparison
 
 
 ##Quarterly Comparison
-
-##Similar Events comparison
